# DataFlowFramework

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.config  readme.md
cmake/: add_cmake_tidy_support.cmake  add_code_coverage_support.cmake  add_deploy_compile_time_json_target.cmake  add_doxygen_target.cmake  add_example.cmake  add_example_test.cmake  add_example_test_target.cmake  add_executable_with_dataflow_dependency.cmake  add_format_target.cmake  add_unit_test.cmake  format.sh  require_program.cmake
doxyfiles/: mainpage.dox
examples/: CMakeLists.txt  simpleAdder.cpp  simpleBlockOutputPredicate.cpp  simpleInputOutput.cpp  simpleLargeDataTrans.cpp  simpleMultipleInputOutput.cpp  simpleMultithread.cpp  simpleOutputFilter.cpp  singleThread.cpp
examples/referenceOutputFiles/: simpleAdder_cout.txt  simpleInputOutput_cout.txt  simpleLargeDataTrans_cout.txt  simpleMultipleInputOutput_cout.txt  simpleOutputFilter_cout.txt
include/: Block.h  BlockIf.h  Channel.h  ChannelBundle.h  ChannelIf.h  InvokeExecutor.h
include/base/: Block.h  BlockIf.h  Channel.h  ChannelAlwaysDataAvailableDecorator.h  ChannelBase.h  ChannelBundle.h  ChannelCircleBuf.h  ChannelIf.h  ChannelLocker.h  ChannelThreadSafetyDecorator.h  Channels.h  Executor.h  ExecutorAsync.h  ExecutorIf.h  ExecutorMultithread.h  GeneratorBlock.h  SinkBlock.h  TaskBuffer.h  ThreadWorker.h
include/base/blocks/: Block.h
include/base/channels/: Channel.h  ChannelBase.h  ChannelThreadSafetyDecorator.h  Channels.h
include/base/tools/: TransmissionAnalyser.h
include/dataflow/: CMakeLists.txt  dataflow.h
include/dataflow/blocks/: Block.h  Block.hpp  BlockIf.h  GeneratorBlock.h  GeneratorBlock.hpp  OutputPredicate.h  OutputPredicates.h  OutputPredicates.hpp  PredicateBundle.h  SinkBlock.h  SinkBlock.hpp  blocks.h
include/dataflow/blocks/impl/: Block.hpp  GeneratorBlock.hpp  OutputPredicate.hpp  OutputPredicates.hpp  PredicateBundle.hpp  SinkBlock.hpp
include/dataflow/blocks/outputPredicates/: OutputAll.h  outputPredicates.h
include/dataflow/channels/: Channel.h  Channel.hpp  ChannelAdTs.h  ChannelAlwaysDataAvailable.h  ChannelAlwaysDataAvailableDecorator.h  ChannelAlwaysDataAvailableDecorator.hpp  ChannelAlwaysDataAvailableNoTrigger.h  ChannelBase.h  ChannelBase.hpp  ChannelBundle.h  ChannelBundle.hpp  ChannelCircleBuf.h  ChannelCircleBuf.hpp  ChannelCircleBufThreadSafe.h  ChannelDataAvailableNoTrigger.h  ChannelIf.h  ChannelThreadSafeIgnoreDefaults.h  ChannelThreadSafeNoTrigger.h  ChannelThreadSafetyDecorator.h  ChannelThreadSafetyDecorator.hpp  ChannelThreadSave.h  Channels.h  TriggerPolicy.h  channels.h
include/dataflow/channels/dataContainers/: ChannelCircleBufContainer.h  ChannelDataContainer.h  ChannelDataContainerIf.h  ChannelUnlimitedDataContainer.h  dataContainers.h
include/dataflow/channels/decorators/: ChannelAlwaysDataAvailableDecorator.h  ChannelThreadSafetyDecorator.h  decorators.h
include/dataflow/channels/ignorePredicates/: IgnoreDefaults.h  IgnoreNothing.h  ignorePredicates.h
include/dataflow/channels/impl/: Channel.hpp  ChannelAlwaysDataAvailableDecorator.hpp  ChannelBase.hpp  ChannelBundle.hpp  ChannelCircleBuf.hpp  ChannelCircleBufContainer.hpp  ChannelDataContainer.hpp  ChannelIf.hpp  ChannelThreadSafetyDecorator.hpp  ChannelUnlimitedDataContainer.hpp  IgnoreDefaults.hpp  IgnoreNothing.hpp
include/dataflow/executors/: Executor.h  Executor.hpp  ExecutorAsync.h  ExecutorAsync.hpp  ExecutorIf.h  ExecutorMultithread.h  ExecutorMultithread.hpp  ExecutorSeq.h  TaskBuffer.h  TaskBuffer.hpp  ThreadWorker.h  ThreadWorker.hpp  executors.h
include/dataflow/executors/impl/: Executor.hpp  ExecutorAsync.hpp  ExecutorMultithread.hpp  ExecutorSeq.hpp  TaskBuffer.hpp  ThreadWorker.hpp
include/dataflow/executors/internal/: TaskBuffer.h  ThreadWorker.h
include/dataflow/tools/: TransmissionAnalyser.h  TransmissionAnalyser.hpp  is_compareable.h  tools.h
include/dataflow/tools/impl/: TransmissionAnalyser.hpp  is_compareable_impl.hpp
scripts/: example_test_driver.sh
src/: Block.hpp  CMakeLists.txt  Channel.hpp  ChannelBundle.hpp  InvokeExecutor.hpp  main.cpp
src/base/: Block.hpp  CMakeLists.txt  Channel.hpp  ChannelAlwaysDataAvailableDecorator.hpp  ChannelBase.hpp  ChannelBundle.hpp  ChannelLocker.hpp  ChannelThreadSafetyDecorator.hpp  Executor.hpp  ExecutorAsync.cpp  ExecutorAsync.hpp  ExecutorMultithread.hpp  SinkBlock.hpp  TaskBuffer.hpp  ThreadWorker.hpp  TransmissionAnalyser.hpp
test/: CMakeLists.txt
test/base/: CMakeLists.txt  add_unit_test.cmake  ptest_transmissionAnalyses.cpp  test_block.cpp  test_block_output_predicate.cpp  test_channelAlwaysDataAvailable.cpp  test_channelBundle.cpp  test_channelLocker.cpp  test_channelThreadSafe.cpp  test_executorMultihread.cpp  test_executorMultihread_1.cpp  test_executorMultihread_2.cpp  test_generatorBlock.cpp  test_sinkBlock.cpp  test_taskBuffer.cpp  test_threadWorker.cpp  test_transmissionAnalyser.cpp
test/dataflow/: CMakeLists.txt  add_unit_test.cmake  ptest_transmissionAnalyses.cpp  test_block.cpp  test_block_output_predicate.cpp  test_channelAlwaysDataAvailable.cpp  test_channelBundle.cpp  test_channelThreadSafe.cpp  test_executorMultihread_1.cpp  test_executorMultihread_2.cpp  test_generatorBlock.cpp  test_is_compareable.cpp  test_output_predicate.cpp  test_predicate_bundle.cpp  test_sinkBlock.cpp  test_taskBuffer.cpp  test_threadWorker.cpp  test_transmissionAnalyser.cpp
